--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
         android:theme="@style/Theme.FirebaseApplication">
         <activity
             android:name=".ShoppingList"
-            android:exported="true" />
+            android:exported="true"
+            android:label="Shopping List" />
         <activity
             android:name=".Register"
-            android:exported="true" />
+            android:exported="true"
+            android:label="Register" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="Sign Up">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
